@@ -1,17 +1,13 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/chipenrich.R, R/chipenrich_package_doc.R
-\docType{package}
-\name{chipenrich}
-\alias{chipenrich}
-\alias{chipenrich}
-\alias{chipenrich-package}
-\title{Run ChIP-Enrich on a dataset of ChIP-seq peaks}
+% Please edit documentation in R/broadenrich.R
+\name{broadenrich}
+\alias{broadenrich}
+\title{Run Broad-Enrich on broad genomic regions}
 \usage{
-chipenrich(peaks, out_name = "chipenrich", out_path = getwd(),
+broadenrich(peaks, out_name = "broadenrich", out_path = getwd(),
   genome = supported_genomes(), genesets = c("GOBP", "GOCC", "GOMF"),
-  locusdef = "nearest_tss", method = "chipenrich", mappability = NULL,
-  fisher_alt = "two.sided", qc_plots = TRUE, min_geneset_size = 15,
-  max_geneset_size = 2000, num_peak_threshold = 1, n_cores = 1)
+  locusdef = "nearest_tss", mappability = NULL, qc_plots = TRUE,
+  min_geneset_size = 15, max_geneset_size = 2000, n_cores = 1)
 }
 \arguments{
 \item{peaks}{Either a file path or a \code{data.frame} of peaks in BED-like
@@ -26,11 +22,11 @@ acceptable column names.}
 
 \item{out_name}{Prefix string to use for naming output files. This should not
 contain any characters that would be illegal for the system being used (Unix,
-Windows, etc.) The default value is "chipenrich", and a file "chipenrich_results.tab"
-is produced. If \code{qc_plots} is set, then a file "chipenrich_qcplots.pdf"
+Windows, etc.) The default value is "broadenrich", and a file "broadenrich_results.tab"
+is produced. If \code{qc_plots} is set, then a file "broadenrich_qcplots.pdf"
 is produced containing a number of quality control plots. If \code{out_name}
 is set to NULL, no files are written, and results then must be retrieved from
-the list returned by \code{chipenrich}.}
+the list returned by \code{broadenrich}.}
 
 \item{out_path}{Directory to which results files will be written out. Defaults
 to the current working directory as returned by \code{\link{getwd}}.}
@@ -48,20 +44,11 @@ or name, and the second column being Entrez Gene IDs.}
 a custom locus definition. NOTE: Must be for a \code{supported_genome()}, and
 must have columns 'chr', 'start', 'end', and 'gene_id' or 'geneid'.}
 
-\item{method}{A character string specifying the method to use for enrichment
-testing. Must be one of ChIP-Enrich ('chipenrich') (default), Poly-Enrich ('polyenrich'),
-or Fisher's exact test ('fet'). For a list of supported methods, use
-\code{supported_methods()}.}
-
 \item{mappability}{One of \code{NULL}, a file path to a custom mappability file,
 or an \code{integer} for a valid read length given by \code{supported_read_lengths}.
 If a file, it should contain a header with two column named 'gene_id' and 'mappa'.
 Gene IDs should be Entrez IDs, and mappability values should range from 0 and 1.
 Default value is NULL.}
-
-\item{fisher_alt}{If method is 'fet', this option indicates the alternative
-for Fisher's exact test, and must be one of 'two-sided' (default), 'greater',
-or 'less'.}
 
 \item{qc_plots}{A logical variable that enables the automatic generation of
 plots for quality control.}
@@ -72,10 +59,6 @@ to be considered for enrichment testing.}
 \item{max_geneset_size}{Sets the maximum number of genes a gene set may have
 to be considered for enrichment testing.}
 
-\item{num_peak_threshold}{Sets the threshold for how many peaks a gene must
-have to be considered as having a peak. Defaults to 1. Only relevant for
-Fisher's exact test and ChIP-Enrich methods.}
-
 \item{n_cores}{The number of cores to use for enrichment testing. We recommend
 using only up to the maximum number of \emph{physical} cores present, as
 virtual cores do not significantly decrease runtime. Default number of cores
@@ -84,7 +67,7 @@ is set to 1. NOTE: Windows does not support multicore enrichment.}
 \value{
 A list, containing the following items:
 
-\item{opts }{A data frame containing the arguments/values passed to \code{chipenrich}.}
+\item{opts }{ A data frame containing the arguments/values passed to \code{broadenrich}.}
 
 \item{peaks }{
 A data frame containing peak assignments to genes. Peaks which do not overlap
@@ -100,14 +83,13 @@ The columns are:
   \item{chr}{ is the chromosome the peak originated from. }
   \item{peak_start}{ is start position of the peak. }
   \item{peak_end}{ is end position of the peak. }
-  \item{peak_midpoint}{ is the midpoint of the peak. }
   \item{gene_id}{ is the Entrez ID of the gene to which the peak was assigned. }
   \item{gene_symbol}{ is the official gene symbol for the gene_id (above). }
   \item{gene_locus_start}{ is the start position of the locus for the gene to which the peak was assigned (specified by the locus definition used.) }
   \item{gene_locus_end}{ is the end position of the locus for the gene to which the peak was assigned (specified by the locus definition used.) }
-  \item{nearest_tss}{ is the closest TSS to this peak (for any gene, not necessarily the gene this peak was assigned to.) }
-  \item{nearest_tss_gene}{ is the gene having the closest TSS to the peak (should be the same as gene_id when using the nearest TSS locus definition.) }
-  \item{nearest_tss_gene_strand}{ is the strand of the gene with the closest TSS. }
+  \item{overlap_start}{ the start position of the peak overlap with the gene locus.}
+  \item{overlap_end}{ the end position of the peak overlap with the gene locus.}
+  \item{peak_overlap}{ the base pair overlap of the peak with the gene locus.}
 }}
 
 \item{peaks_per_gene }{
@@ -119,6 +101,8 @@ A data frame of the count of peaks per gene. The columns are:
   \item{log10_length}{ is the log10(locus length) for the gene.}
   \item{num_peaks}{ is the number of peaks that were assigned to the gene, given the current locus definition. }
   \item{peak}{ is whether or not the gene is considered to have a peak, as defined by \code{num_peak_threshold}. }
+  \item{peak_overlap}{ is the number of base pairs of the gene covered by a peak.}
+  \item{ratio}{ is the proportion of the gene covered by a peak.}
 }}
 
 \item{results }{
@@ -136,29 +120,32 @@ frame.) The columns are:
   \item{N.Geneset.Genes}{ is the number of genes in the gene set.}
   \item{N.Geneset.Peak.Genes}{ is the number of genes in the genes set that were assigned at least one peak.}
   \item{Geneset.Avg.Gene.Length}{ is the average length of the genes in the gene set.}
+  \item{Geneset.Avg.Gene.Coverage}{ is the mean proportion of the gene loci in the gene set covered by a peak.}
   \item{Geneset.Peak.Genes}{ is the list of genes from the gene set that had at least one peak assigned.}
 
 }}
 }
 \description{
-Run gene set enrichment testing (ChIP-Enrich) on a ChIP-seq
-peak dataset or other type of dataset consisting of regions across the genome.
-The user can call \code{chipenrich()} to run the method on their data. A number
-of arguments can be provided to change the type of test, the genome build,
-which sets of genes to test, how peaks are assigned to genes, and other minor options.
-
-ChIP-Enrich performs gene set enrichment testing using peaks called from a
-ChIP-seq experiment. The method empirically corrects for confounding factors
-such as the length of genes, and the mappability of the sequence surrounding genes.
+Run gene set enrichment testing with the Broad-Enrich method. Broad-Enrich is
+designed for broad genomic regions, as one often gets from ChIP-seq experiments
+on histone modifications.
+}
+\details{
+The Broad-Enrich method uses the cumulative peak coverage of genes in its model
+for enrichment in the model \code{GO ~ ratio + s(log10_length)}. Here, \code{GO}
+is a binary vector indicating whether a gene is in the gene set being tested,
+\code{ratio} is a numeric vector indicating the ratio of the gene covered by
+peaks, and \code{s(log10_length)} is a binomial cubic smoothing spline which
+adjusts for the relationship between gene coverage and locus length.
 }
 \examples{
 
-# Run ChipEnrich using an example dataset, assigning peaks to the nearest TSS,
+# Run Broad-Enrich using an example dataset, assigning peaks to the nearest TSS,
 # and on a small custom geneset
 data(peaks_E2F4, package = 'chipenrich.data')
 peaks_E2F4 = subset(peaks_E2F4, peaks_E2F4$chrom == 'chr1')
 gs_path = system.file('extdata','vignette_genesets.txt', package='chipenrich')
-results = chipenrich(peaks_E2F4, method='chipenrich', locusdef='nearest_tss',
+results = broadenrich(peaks_E2F4, locusdef='nearest_tss',
 			genome = 'hg19', genesets=gs_path, out_name=NULL)
 
 # Get the list of peaks that were assigned to genes.
